apps/sandbox-nginx/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: sandbox-nginx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sandbox-nginx
                port:
                  number: 80
